HTML-Generator: Basistyp der Attribute werden dargestellt

--- a/src/main/resources/generator/html/attributgruppe.vm
+++ b/src/main/resources/generator/html/attributgruppe.vm
@@ -49,6 +49,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Attributtyp</th>
+                    <th>Typ</th>
                     <th>Anzahl</th>
                     <th>Anzahl ist</th>
                     <th>Beschreibung</th>
@@ -58,6 +59,21 @@
                     <tr>
                         <td class="#if ($row % 2 == 0) rowColor #else altColor #end">${attribut.name}</td>
                         <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${attribut.attributTyp.konfigurationsBereich.zustaendiger.pid}/${attribut.attributTyp.konfigurationsBereich.pid}/${attribut.attributTyp.pid}.html">${attribut.attributTyp.name}</a></td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end">
+                            #if( $attribut.attributTyp.class.simpleName == "AttributListenDefinition" )
+                                Attributliste
+                            #elseif( $attribut.attributTyp.class.simpleName == "GanzzahlAttributTyp" )
+                                Ganzzahl
+                            #elseif( $attribut.attributTyp.class.simpleName == "KommazahlAttributTyp" )
+                                Kommazahl
+                            #elseif( $attribut.attributTyp.class.simpleName == "ZeichenkettenAttributTyp" )
+                                Zeichenkette
+                            #elseif( $attribut.attributTyp.class.simpleName == "ZeitstempelAttributTyp" )
+                                Zeitstempel
+                            #elseif( $attribut.attributTyp.class.simpleName == "ObjektReferenzAttributTyp" )
+                                Objektreferenz
+                            #end
+                        </td>
                         <td class="#if ($row % 2 == 0) rowColor #else altColor #end">${attribut.anzahl}</td>
                         <td class="#if ($row % 2 == 0) rowColor #else altColor #end">
                             #if( ${attribut.anzahlVariabel} )
@@ -81,7 +97,6 @@
         </div>
     #end
     <p>TODO Attributlisten darstellen</p>
-    <p>TODO Für Attribute ergänzen: Typ</p>
 </div>
 </body>
 </html>
