--- a/src/main/resources/generator/html/alleobjekte-frame.vm
+++ b/src/main/resources/generator/html/alleobjekte-frame.vm
@@ -15,9 +15,11 @@
     <ul class="objekte">
         #foreach( $objekt in $objekte )
         <li><a href="${objekt.konfigurationsBereich.zustaendiger.pid}/${objekt.konfigurationsBereich.pid}/${objekt.pid}.html" target="objektFrame">
-            #if ( ${objekt.class.simpleName} == "Typ" )<em>#end
+            #if ( ${objekt.class.simpleName} == "Typ" )<strong>#end
+            #if ( ${objekt.class.simpleName} == "Attributgruppe" )<em>#end
             $objekt.nameOderPid
-            #if ( ${objekt.class.simpleName} == "Typ" )</em>#end
+            #if ( ${objekt.class.simpleName} == "Typ" )</strong>#end
+            #if ( ${objekt.class.simpleName} == "Attributgruppe" )</em>#end
         </a></li>
         #end
     </ul>
