--- a/src/main/resources/generator/html/attributgruppe.vm
+++ b/src/main/resources/generator/html/attributgruppe.vm
@@ -41,6 +41,35 @@
     #if( !$attributgruppe.beschreibung.empty )
     <p>${attributgruppe.beschreibung}</p>
     #end
+    #if( !$attributgruppe.attributgruppenVerwendungen.empty )
+        <div class="ueberblick">
+            <table border="0" cellpadding="0" cellspacing="0">
+                <caption><span>Aspekte</span></caption>
+                <tbody>
+                <tr>
+                    <th>Aspekt</th>
+                    <th>Datensatzverwendung</th>
+                    <th>Verwendung explizit vorgegegeben</th>
+                </tr>
+                    #set( $row = 1 )
+                    #foreach( $attributgruppenVerwendung in $attributgruppe.attributgruppenVerwendungen )
+                    <tr>
+                        <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${attributgruppenVerwendung.aspekt.konfigurationsBereich.zustaendiger.pid}/${attributgruppenVerwendung.aspekt.konfigurationsBereich.pid}/${attributgruppenVerwendung.aspekt.pid}.html">${attributgruppenVerwendung.aspekt.nameOderPid}</a></td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end">${attributgruppenVerwendung.datensatzVerwendung}</td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end">
+                            #if( ${attributgruppenVerwendung.verwendungExplizitVorgegeben} )
+                                Ja
+                            #else
+                                Nein
+                            #end
+                        </td>
+                    </tr>
+                        #set( $row = $row + 1 )
+                    #end
+                </tbody>
+            </table>
+        </div>
+    #end
     #if( !$attributgruppe.attribute.empty )
         <div class="ueberblick">
             <table border="0" cellpadding="0" cellspacing="0">
@@ -48,7 +77,6 @@
                 <tbody>
                 <tr>
                     <th>Name</th>
-                    <th>Attributtyp</th>
                     <th>Typ</th>
                     <th>Anzahl</th>
                     <th>Anzahl ist</th>
